k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-project-deployment
  namespace: my-test-project-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-test-project
  template:
    metadata:
      labels:
        app: my-test-project
    spec:
      containers:
      - name: my-test-project-container
        image: mlops-test:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
