k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-project-service
  namespace: my-test-project-ns
spec:
  selector:
    app: my-test-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
