k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-test-project-ingress
  namespace: my-test-project-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.my-test-project.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-test-project-service
            port:
              number: 80
